--- a/src/app/components/shared/search/search.component.scss
+++ b/src/app/components/shared/search/search.component.scss
@@ -1,3 +1,18 @@
 .searchIcon{
   color: white;
 }
+
+#collapseWidthExample{
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  background: yellow;
+  vertical-align: middle;
+  line-height: 30px;
+  height: 30px;
+  width: 0px;
+}
+
+#collapseWidthExample.in {
+  width: 220px;
+}
