--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,23 +1,60 @@
-<section class="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-6">
-        <h4>Eu sou o footer.</h4>
-      </div>
-      <div class="col-6">
-        <p>redes sociais</p>
-        <div class="btn-group">
-          <button type="button" class="btn btn-primary">
-            Facebook
-          </button>
-          <button type="button" class="btn btn-primary">
-            Twitter
-          </button>
-          <button type="button" class="btn btn-primary">
-            Linked-in
-          </button>
-        </div>
-      </div>
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-sennatech text-muted">
+  <!-- Section: Social media -->
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block">
+      <span class="preFooter">Gostou? <a href="" class="preFooter__link">Fale conosco.</a></span>
     </div>
+    <!-- Left -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="border-bottom">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-4 mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3"></i>Company name
+          </h6>
+          <p class="footerAdress">
+            Av. Engenheiro Luís Carlos Berrini, 1748, 5º Andar, Conjunto 502-504, Cep. 04551-010.  Cidade Monções, São Paulo - SP
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 ms-auto mb-md-0 mb-4">
+          <div>
+            <a href="" class="me-4 text-reset">
+              <i class="bi bi-linkedin" width="32" height="32"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+              <i class="bi bi-instagram"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+              <i class="bi bi-facebook"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+              <i class="bi bi-whatsapp"></i>
+            </a>
+          </div>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4 footerCopy">
+    © 2023 Sennatech Consultoria.
   </div>
-</section>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
