Alinhamento dos Cards (Home)

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -15,6 +15,20 @@
           <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
         </div>
       </div>
+      <div class="card cardService">
+        <div class="card-body">
+          <img src="../../../assets/images/iconExemple.png" class="imgService">
+          <h3 class="card-title">Nomenclatura do Serviço</h3>
+          <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
+        </div>
+      </div>
+      <div class="card cardService">
+        <div class="card-body">
+          <img src="../../../assets/images/iconExemple.png" class="imgService">
+          <h3 class="card-title">Nomenclatura do Serviço</h3>
+          <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
+        </div>
+      </div>
     </div>
     <div class="btnDiv">
       <button class="btnLight">
