Home 2 Sections e Footer

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,8 @@
 <app-carousel></app-carousel>
+
+<!-- SERVIÇOS -->
 <div class="container">
-  <div class="sectionServicos">
+  <div class="section">
     <div class="tituloServicos">
       <h6 class="minTitle">Serviços</h6>
       <div class="subTitulo">
@@ -30,11 +32,75 @@
         </div>
       </div>
     </div>
-    <div class="btnDiv">
+    <div class="btnDiv mx-auto my-5">
       <button class="btnLight">
         <p class="btnText">Exibir todos</p>
       </button>
     </div>
   </div>
 </div>
+<!-- /SERVIÇOS -->
+
+<!-- SUCCESS CASE -->
+<div class="container">
+  <div class="section">
+    <div class="tituloServicos">
+      <h6 class="minTitle">Success Case</h6>
+      <div class="subTitulo">
+        <p>Clientes que afirmam <span class="bold">nossa experiência.</span></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="imgCards">
+  <div class="imgCase">
+    <img src="../../../assets/images/nubankCase.png" alt="...." class="imgCase__cases">
+  </div>
+  <div class="imgCase">
+    <img src="../../../assets/images/vivoCase.png" alt="...." class="imgCase__cases">
+  </div>
+  <div class="imgCase">
+    <img src="../../../assets/images/ifoodCase.png" alt="...." class="imgCase__cases">
+  </div>
+  <div class="imgCase">
+    <img src="../../../assets/images/aleloCase.png" alt="...." class="imgCase__cases">
+  </div>
+</div>
+<div class="btnDiv mx-auto my-5">
+  <button class="btnLight">
+    <p class="btnText">Exibir todos</p>
+  </button>
+</div>
+<!-- /SUCCESS CASE -->
+
+<!-- PARCEIROS -->
+<div class="container">
+  <div class="section">
+    <div class="tituloServicos">
+      <h6 class="minTitle">Parceiros</h6>
+      <div class="subTitulo">
+        <p>Curadoria de <span class="bold">parceiros reconhecidos.</span></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4 ms-auto">
+        <img src="../../../assets/images/solace.png" alt="...." class="">
+      </div>
+      <div class="col-4 me-auto">
+        <p class="parceirosTxt">
+          <span class="bold">Projetar, implantar e gerenciar arquitetura orientada a eventos (EDA)</span>
+          em ambientes de nuvem híbrida, multinuvem e IoT.
+        </p>
+      </div>
+    </div>
+    <div class="btnDiv mx-auto my-5">
+      <button class="btnLight">
+        <p class="btnText">Exibir todos</p>
+      </button>
+    </div>
+  </div>
+</div>
+<!-- /PARCEIROS -->
+
+
 <app-footer></app-footer>
