--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -10,8 +10,7 @@
       <div class="row mt-3">
         <div class="col-md-3 col-lg-4 col-xl-4 mb-4">
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="bi bi-building"></i>
-            Company name
+            <img src="../../../assets/images/sennatech_branco.png"/>
           </h6>
           <p class="footerAdress">
             Av. Engenheiro Luís Carlos Berrini, 1748, 5º Andar, Conjunto 502-504, Cep. 04551-010.  Cidade Monções, São Paulo - SP
