--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -46,6 +46,12 @@
   line-height: 21px;
   text-transform: uppercase;
   color: #FFFFFF;
+
+  &:hover{
+    color: #6AF4FF;
+    transition: 0.4s cubic-bezier(0.45, 0.05, 0.55, 0.95);
+    text-align: -webkit-center;
+  }
 }
 
 .active{
