Atualizacao Pagina Sobre

--- a/src/app/pages/cases/cases.component.html
+++ b/src/app/pages/cases/cases.component.html
@@ -1,3 +1,8 @@
 <app-menu></app-menu>
 <p>cases works!</p>
+<!-- <app-breadcrumb [breadcrumbItems]="[
+  { label: 'Página Inicial', link: '/home' },
+  { label: 'Foo', link: '/foo' },
+  { label: 'Detalhes', link: '/foo/details' }
+]"></app-breadcrumb> -->
 <app-footer></app-footer>
