--- a/src/app/pages/sobre/sobre.component.html
+++ b/src/app/pages/sobre/sobre.component.html
@@ -1,5 +1,53 @@
 <app-menu></app-menu>
-<section class="wrapper">
-  <p>sobre works!</p>
-</section>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1 class="sobreTitle">Somos parceiros das <span>melhores soluções digitais.</span></h1>
+    </div>
+    <div class="col">
+      <p class="sobreText">Somos uma equipe de desenvolvedores, gerentes de projetos e analistas de sistemas, trabalhando com valores compartilhados e com um único objetivo: ajudar negócios imersos no meio digital a resolverem problemas reais.</p>
+      <p class="sobreText">Priorizamos a seleção dos melhores parceiros de tecnologia para manter o nível de excelência das entregas e oferecer alternativas que atendam diferentes demandas, apoiando o crescimento e melhoria contínua dos processos.</p>
+    </div>
+  </div>
+  <div class="row counter">
+    <div class="col">
+      <p class="counter__number">50+</p>
+      <p class="counter__text">Soluções</p>
+    </div>
+    <div class="col">
+      <p class="counter__number">10+</p>
+      <p class="counter__text">Consultores</p>
+    </div>
+    <div class="col">
+      <p class="counter__number">3+</p>
+      <p class="counter__text">Parceiros</p>
+    </div>
+    <div class="col">
+      <p class="counter__number">1</p>
+      <p class="counter__text">Objetivo</p>
+    </div>
+  </div>
+</div>
+
+<nav class="navbar bg-dark">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h4 class="bg-dark__Title">Qualidade</h4>
+        <p class="bg-dark__Text">As entregas passam por uma série de validações para que, independente da demanda, nossos clientes possam esperar resultados de excelência.</p>
+      </div>
+      <div class="col">
+        <h4 class="bg-dark__Title">Parceria</h4>
+        <p class="bg-dark__Text">Procuramos sempre por novas tecnologias e ideias na busca permanente de inovação que resulte em geração de valor para o cliente e organização.</p>
+      </div>
+      <div class="col">
+        <h4 class="bg-dark__Title">Conhecimento</h4>
+        <p class="bg-dark__Text">Estimulamos a difusão do conhecimento e implantação das melhores práticas com o objetivo de consolidar  a experiência do time.</p>
+      </div>
+    </div>
+  </div>
+</nav>
+
+
 <app-footer></app-footer>
