--- a/src/app/pages/sobre/sobre.component.html
+++ b/src/app/pages/sobre/sobre.component.html
@@ -1,13 +1,15 @@
 <app-menu></app-menu>
 
 <div class="container">
-  <div class="row">
-    <div class="col">
-      <h1 class="sobreTitle">Somos parceiros das <span>melhores soluções digitais.</span></h1>
-    </div>
-    <div class="col">
-      <p class="sobreText">Somos uma equipe de desenvolvedores, gerentes de projetos e analistas de sistemas, trabalhando com valores compartilhados e com um único objetivo: ajudar negócios imersos no meio digital a resolverem problemas reais.</p>
-      <p class="sobreText">Priorizamos a seleção dos melhores parceiros de tecnologia para manter o nível de excelência das entregas e oferecer alternativas que atendam diferentes demandas, apoiando o crescimento e melhoria contínua dos processos.</p>
+  <div class="sobreSection">
+    <div class="row">
+      <div class="col-lg-6 col-xs-12">
+        <h1 class="sobreTitle">Somos parceiros das <span>melhores soluções digitais.</span></h1>
+      </div>
+      <div class="col-lg-6 col-xs-12">
+        <p class="sobreText">Somos uma equipe de desenvolvedores, gerentes de projetos e analistas de sistemas, trabalhando com valores compartilhados e com um único objetivo: ajudar negócios imersos no meio digital a resolverem problemas reais.</p>
+        <p class="sobreText">Priorizamos a seleção dos melhores parceiros de tecnologia para manter o nível de excelência das entregas e oferecer alternativas que atendam diferentes demandas, apoiando o crescimento e melhoria contínua dos processos.</p>
+      </div>
     </div>
   </div>
   <div class="row counter">
@@ -49,5 +51,31 @@
   </div>
 </nav>
 
+<div class="container">
+  <h3 class="certTitle">Mais que consultores:
+    <br/>
+    <span>certificados em experiência.</span>
+  </h3>
+  <div class="certifications">
+    <div class="row">
+      <div class="col">
+        <img src="../../../assets/images/certificado2015.png" alt="">
+          <a href="#1">
+            <p class="certText">Ver certificado<i class="bi bi-arrow-up-right"></i></p>
+          </a>
+      </div>
+      <div class="col">
+        <img src="../../../assets/images/certificado2013.png" alt="">
+        <a href="#2">
+          <p class="certText">Ver certificado<i class="bi bi-arrow-up-right"></i></p>
+        </a>
+      </div>
+    </div>
+  </div>
+  <h4 class="vagasTitle">Quer fazer parte?
+    <br/>
+    <span>Confira nossas <a href="/vagas">vagas</a>.</span>
+  </h4>
+</div>
 
 <app-footer></app-footer>
