--- a/src/app/pages/parceiros/parceiros.component.html
+++ b/src/app/pages/parceiros/parceiros.component.html
@@ -1,1 +1,55 @@
-<p>parceiros works!</p>
+<app-menu></app-menu>
+
+<div class="container">
+  <h3 class="parceiros__title">Curadoria de
+    <br/>
+    <span>parceiros reconhecidos.</span>
+  </h3>
+  <div class="container-min">
+    <div class="row">
+      <div class="col-lg-4 col-xs-12">
+        <div class="parceiros">
+          <img src="../../../assets/images/solace_minimal.png" alt="" class="parceiros__img">
+        </div>
+        <div class="parceiros">
+          <p class="parceiros__text">Projetar, implantar e gerenciar arquitetura orientada a eventos (EDA) em ambientes de nuvem híbrida, multinuvem e IoT.</p>
+        </div>
+        <div class="parceiros">
+          <a href="#linkparceiro">
+            <p class="parceiros__link">Saiba mais<i class="bi bi-arrow-up-right"></i></p>
+          </a>
+        </div>
+      </div>
+      <div class="col-lg-4 col-xs-12">
+        <div class="parceiros">
+          <img src="../../../assets/images/solvo_minimal.png" alt="" class="parceiros__img">
+        </div>
+        <div class="parceiros">
+          <p class="parceiros__text">Descubram, priorizem, mitiguem e corrijam automaticamente os riscos de acesso à infraestrutura de nuvem.</p>
+        </div>
+        <div class="parceiros">
+          <a href="#linkparceiro">
+            <p class="parceiros__link">Saiba mais<i class="bi bi-arrow-up-right"></i></p>
+          </a>
+        </div>
+      </div>
+      <div class="col-lg-4 col-xs-12">
+        <div class="parceiros">
+          <img src="../../../assets/images/wib_minimal.png" alt="" class="parceiros__img">
+        </div>
+        <div class="parceiros">
+          <p class="parceiros__text">A Wib API oferece visibilidade contínua em todo o ciclo de vida da API, desde o código até o teste e a produção.</p>
+        </div>
+        <div class="parceiros">
+          <a href="#linkparceiro">
+            <p class="parceiros__link">Saiba mais<i class="bi bi-arrow-up-right"></i></p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+</div>
+
+<app-footer></app-footer>
