Ajustes Hover da Home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -54,16 +54,48 @@
 </div>
 <div class="imgCards">
   <div class="imgCase">
-    <img src="../../../assets/images/nubankCase.png" alt="...." class="imgCase__cases">
+    <img src="../../../assets/images/nubankCase.png" alt="Case Nubank" class="imgCase__cases">
+    <div class="hoverText">
+      <img src="../../../assets/images/nu_Hover.png" alt="NuBank" class="hoverText__caseImg">
+      <img src="../../../assets/images/solvo_white.png" alt="Solvo" class="hoverText__caseImg">
+      <p class="hoverText__yearHover">2023</p>
+      <a href="" class="hoverText__linkCase">
+        <p class="">Ver Case</p>
+      </a>
+    </div>
   </div>
   <div class="imgCase">
-    <img src="../../../assets/images/vivoCase.png" alt="...." class="imgCase__cases">
+    <img src="../../../assets/images/vivoCase.png" alt="Case Vivo" class="imgCase__cases">
+    <div class="hoverText">
+      <img src="../../../assets/images/vivo_Hover.png" alt="Vivo Brasil" class="hoverText__caseImg">
+      <img src="../../../assets/images/wib_white.png" alt="Wib" class="hoverText__caseImg">
+      <p class="hoverText__yearHover">2023</p>
+      <a href="" class="hoverText__linkCase">
+        <p class="">Ver Case</p>
+      </a>
+    </div>
   </div>
   <div class="imgCase">
-    <img src="../../../assets/images/ifoodCase.png" alt="...." class="imgCase__cases">
+    <img src="../../../assets/images/ifoodCase.png" alt="Case Ifood" class="imgCase__cases">
+    <div class="hoverText">
+      <img src="../../../assets/images/ifood_Hover.png" alt="IFood" class="hoverText__caseImg">
+      <img src="../../../assets/images/wib_white.png" alt="Wib" class="hoverText__caseImg">
+      <p class="hoverText__yearHover">2023</p>
+      <a href="" class="hoverText__linkCase">
+        <p class="">Ver Case</p>
+      </a>
+    </div>
   </div>
   <div class="imgCase">
-    <img src="../../../assets/images/aleloCase.png" alt="...." class="imgCase__cases">
+    <img src="../../../assets/images/aleloCase.png" alt="Case Alelo" class="imgCase__cases">
+    <div class="hoverText">
+      <img src="../../../assets/images/alelo_Hover.png" alt="Alelo" class="hoverText__caseImg">
+      <img src="../../../assets/images/solvo_white.png" alt="Solvo" class="hoverText__caseImg">
+      <p class="hoverText__yearHover">2023</p>
+      <a href="" class="hoverText__linkCase">
+        <p class="">Ver Case</p>
+      </a>
+    </div>
   </div>
 </div>
 <div class="btnDiv mx-auto my-5">
