--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -132,6 +132,7 @@ $sennatechColorAlt: #B6B6B6;
 .imgCase{
   width: 25%;
   transition: 0.5s ease-in-out;
+  position: relative;
 
     .hoverText{
       display: none;
