--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -99,8 +99,8 @@
   </div>
 </div>
 <div class="btnDiv mx-auto my-5">
-  <button class="btnLight">
-    <p class="btnText">Exibir todos</p>
+  <button class="btnLight btnExplore">
+    <p class="btnText exploreBtn">Explorar Cases</p>
   </button>
 </div>
 <!-- /SUCCESS CASE -->
