--- a/src/app/pages/servicos/servicos.component.html
+++ b/src/app/pages/servicos/servicos.component.html
@@ -1,3 +1,56 @@
 <app-menu></app-menu>
-<p>servicos works!</p>
+<div class="container">
+  <h3 class="servicos__title">Conheça nossas
+    <br/>
+    habilidades <span>em tecnologia.</span>
+  </h3>
+
+  <div class="row">
+    <div class="col-3">
+      <div class="cards">
+        <div class="card cardService">
+          <div class="card-body">
+            <img src="../../../assets/images/iconExemple.png" class="imgService">
+            <h3 class="card-title">Nomenclatura do Serviço</h3>
+            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-3">
+      <div class="cards">
+        <div class="card cardService">
+          <div class="card-body">
+            <img src="../../../assets/images/iconExemple.png" class="imgService">
+            <h3 class="card-title">Nomenclatura do Serviço</h3>
+            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-3">
+      <div class="cards">
+        <div class="card cardService">
+          <div class="card-body">
+            <img src="../../../assets/images/iconExemple.png" class="imgService">
+            <h3 class="card-title">Nomenclatura do Serviço</h3>
+            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-3">
+      <div class="cards">
+        <div class="card cardService">
+          <div class="card-body">
+            <img src="../../../assets/images/iconExemple.png" class="imgService">
+            <h3 class="card-title">Nomenclatura do Serviço</h3>
+            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
 <app-footer></app-footer>
