Ajuste Img & Sobre Mobile & Pagination & Shareds

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <!-- Footer -->
 <footer class="text-center text-lg-start bg-sennatech text-muted">
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-    <div class="container d-none d-lg-block">
+    <div class="container d-lg-block">
       <span class="preFooter">Gostou? <a href="" class="preFooter__link">Fale conosco.</a></span>
     </div>
   </section>
