--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -25,7 +25,7 @@
         <a class="nav-link" [routerLink]="carreira" routerLinkActive="active">Carreira</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="contatos" routerLinkActive="active">Contato</a>
+        <a class="nav-link" [routerLink]="contato" routerLinkActive="active">Contato</a>
       </li>
     </ul>
   </div>
