--- a/src/app/pages/cases/cases.component.html
+++ b/src/app/pages/cases/cases.component.html
@@ -1,8 +1,4 @@
 <app-menu></app-menu>
 <p>cases works!</p>
-<!-- <app-breadcrumb [breadcrumbItems]="[
-  { label: 'Página Inicial', link: '/home' },
-  { label: 'Foo', link: '/foo' },
-  { label: 'Detalhes', link: '/foo/details' }
-]"></app-breadcrumb> -->
+<app-breadcrumb></app-breadcrumb>
 <app-footer></app-footer>
