--- a/src/app/pages/error/error.component.html
+++ b/src/app/pages/error/error.component.html
@@ -1,3 +1,18 @@
 <app-menu></app-menu>
-<p>error works!</p>
+<div class="container">
+  <app-breadcrumb></app-breadcrumb>
+  <div class="error">
+    <div class="error__title">
+
+    </div>
+    <div class="error__subTitle">
+
+    </div>
+    <div class="searchForm">
+
+    </div>
+  </div>
+</div>
+
+
 <app-footer></app-footer>
