--- a/src/app/pages/parceiros/parceiros.component.scss
+++ b/src/app/pages/parceiros/parceiros.component.scss
@@ -11,7 +11,7 @@
     font-size: 48px;
     line-height: 120%;
     color: #B6B6B6;
-
+    margin-bottom: 70px;
     span{
       color: #001322;
     }
