--- a/src/app/pages/servicos/servicos.component.html
+++ b/src/app/pages/servicos/servicos.component.html
@@ -1,12 +1,14 @@
 <app-menu></app-menu>
 <div class="container">
+  <app-breadcrumb></app-breadcrumb>
+
   <h3 class="servicos__title">Conheça nossas
     <br/>
     habilidades <span>em tecnologia.</span>
   </h3>
 
   <div class="row">
-    <div class="col-3">
+    <div class="col-lg-3 col-xs-12">
       <div class="cards">
         <div class="card cardService">
           <div class="card-body">
@@ -17,7 +19,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-lg-3 col-xs-12">
       <div class="cards">
         <div class="card cardService">
           <div class="card-body">
@@ -28,7 +30,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-lg-3 col-xs-12">
       <div class="cards">
         <div class="card cardService">
           <div class="card-body">
@@ -39,7 +41,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-lg-3 col-xs-12">
       <div class="cards">
         <div class="card cardService">
           <div class="card-body">
@@ -51,6 +53,54 @@
       </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-lg-3 col-xs-12">
+      <div class="cards">
+        <div class="card cardService">
+          <div class="card-body">
+            <img src="../../../assets/images/iconExemple.png" class="imgService">
+            <h3 class="card-title">Nomenclatura do Serviço</h3>
+            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-xs-12">
+      <div class="cards">
+        <div class="card cardService">
+          <div class="card-body">
+            <img src="../../../assets/images/iconExemple.png" class="imgService">
+            <h3 class="card-title">Nomenclatura do Serviço</h3>
+            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-xs-12">
+      <div class="cards">
+        <div class="card cardService">
+          <div class="card-body">
+            <img src="../../../assets/images/iconExemple.png" class="imgService">
+            <h3 class="card-title">Nomenclatura do Serviço</h3>
+            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-xs-12">
+      <div class="cards">
+        <div class="card cardService">
+          <div class="card-body">
+            <img src="../../../assets/images/iconExemple.png" class="imgService">
+            <h3 class="card-title">Nomenclatura do Serviço</h3>
+            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <app-pagination></app-pagination>
 
 </div>
 <app-footer></app-footer>
