--- a/src/app/pages/sobre/sobre.component.html
+++ b/src/app/pages/sobre/sobre.component.html
@@ -1,7 +1,10 @@
 <app-menu></app-menu>
 
 <div class="container">
+  <app-breadcrumb></app-breadcrumb>
   <div class="sobreSection">
+
+
     <div class="row">
       <div class="col-lg-6 col-xs-12">
         <h1 class="sobreTitle">Somos parceiros das <span>melhores soluções digitais.</span></h1>
@@ -13,19 +16,19 @@
     </div>
   </div>
   <div class="row counter">
-    <div class="col">
+    <div class="col-lg-3 col-6">
       <p class="counter__number">50+</p>
       <p class="counter__text">Soluções</p>
     </div>
-    <div class="col">
+    <div class="col-lg-3 col-6">
       <p class="counter__number">10+</p>
       <p class="counter__text">Consultores</p>
     </div>
-    <div class="col">
+    <div class="col-lg-3 col-6">
       <p class="counter__number">3+</p>
       <p class="counter__text">Parceiros</p>
     </div>
-    <div class="col">
+    <div class="col-lg-3 col-6">
       <p class="counter__number">1</p>
       <p class="counter__text">Objetivo</p>
     </div>
